kubernetes/kube-prod-d1/radarr/prod-d1/ani-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aniradarr
  name: aniradarr
  namespace: radarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aniradarr
  template:
    metadata:
      labels:
        app: aniradarr
    spec:
      containers:
        - name: aniradarr
          image: lscr.io/linuxserver/radarr:latest@sha256:fe051413dfd91b383ba04910552e83fb0306895fefee275c48dafe7bb90807dc
          ports:
          - name: http
            containerPort: 7878
          volumeMounts:
          - name: aniradarr-config
            mountPath: /config
          - name: data
            mountPath: /data
      volumes:
        - name: aniradarr-config
          persistentVolumeClaim:
            claimName: aniradarr-pvc
            readOnly: false
        - name: aniradarr-backup-storage ## Uncomment this and set claimname to PVC
          persistentVolumeClaim:
            claimName: pvc-6ec2a144-1601-4825-bf7d-265c5077ce8b
            readOnly: false
        - name: data
          nfs:
            server: 10.15.21.5
            path: /mnt/user/video/
