kubernetes/kube-prod-d1/radarr/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: radarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest@sha256:fe051413dfd91b383ba04910552e83fb0306895fefee275c48dafe7bb90807dc
          ports:
          - name: http
            containerPort: 7878
          volumeMounts:
          - name: radarr-config
            mountPath: /config
          - name: data
            mountPath: /data
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-pvc
            readOnly: false
        - name: data
          nfs:
            server: 10.15.21.5
            path: /mnt/user/video/
        - name: radarr-backup-storage ## Uncomment this and set claimname to PVC
          persistentVolumeClaim:
            claimName: pvc-07acad48-9774-4621-850a-c68af05ae0fa
            readOnly: false
