kubernetes/kube-prod-d1/radarr/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-web
  namespace: radarr
  labels:
    app: radarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
  selector:
    app: radarr
